@@ -101,6 +101,9 @@ void wxButton::SetLabel(const wxString& label)
     }
 
     wxAnyButton::SetLabel(label);
+#if wxOSX_USE_COCOA
+    OSXSetAcceleratorFromLabel(label);
+#endif
 }
 
 wxWindow *wxButton::SetDefault()
